--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,9 +29,9 @@
       <version>1.6.6</version>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-jdk14</artifactId>
-      <version>1.6.6</version>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.0.6</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
