--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <pivot.version>2.0.2</pivot.version>
+    <drools.version>5.4.0.Final</drools.version>
   </properties>
 
   <build>
@@ -39,11 +40,6 @@
     </dependency>
     <dependency>
       <groupId>org.apache.pivot</groupId>
-      <artifactId>pivot-web</artifactId>
-      <version>${pivot.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.pivot</groupId>
       <artifactId>pivot-wtk</artifactId>
       <version>${pivot.version}</version>
     </dependency>
@@ -51,11 +47,22 @@
       <groupId>org.apache.pivot</groupId>
       <artifactId>pivot-wtk-terra</artifactId>
       <version>${pivot.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-core</artifactId>
+      <version>${drools.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>knowledge-api</artifactId>
+      <version>${drools.version}</version>
     </dependency>
     <dependency>
       <groupId>org.drools.planner</groupId>
       <artifactId>drools-planner-core</artifactId>
-      <version>5.4.0.Final</version>
+      <version>${drools.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -66,6 +73,7 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.0.6</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
