--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <version>2.3</version>
     </dependency>
     <dependency>
+      <groupId>net.sf.supercsv</groupId>
+      <artifactId>super-csv</artifactId>
+      <version>2.0.0-beta-1</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.pivot</groupId>
       <artifactId>pivot-core</artifactId>
       <version>${pivot.version}</version>
