--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.neovisionaries</groupId>
+      <artifactId>nv-i18n</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>net.sf.supercsv</groupId>
       <artifactId>super-csv</artifactId>
       <version>2.0.1</version>
