Adding constraint for juror meeting a big group often

--- a/src/main/resources/weights.properties
+++ b/src/main/resources/weights.properties
@@ -1,6 +1,7 @@
 accumulatedBias=100
 independentRatioDeltaExceeded=100
 jurorAndJurorConflict=10
+jurorMeetsBigGroupOften=10
 loadDeltaExceeded=50
 penalizeChairChange=133
 penalizeJurorWithdraw=111
