--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
       <artifactId>super-csv</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <!-- reuse the dependency of drools-planner-core -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>[2.4,)</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.pivot</groupId>
       <artifactId>pivot-core</artifactId>
