--- a/src/main/resources/weights.properties
+++ b/src/main/resources/weights.properties
@@ -3,7 +3,8 @@ independentRatioDeltaExceeded=100
 jurorAndJurorConflict=10
 jurorMeetsBigGroupOften=10
 loadDeltaExceeded=50
-penalizeChairChange=133
-penalizeJurorWithdraw=111
+penalizeChairChange=5
+penalizeJurorChange=5
+penalizeJurorWithdraw=5
 teamAndChairMeetTwice=200
 teamAndJurorAlreadyMet=1
