Add rule for detecting inexperienced jurors voting

--- a/src/main/resources/weights.properties
+++ b/src/main/resources/weights.properties
@@ -1,5 +1,6 @@
 accumulatedBias=100
 independentRatioDeltaExceeded=100
+inexperiencedJurorVoting=500
 jurorAndJurorConflict=10
 jurorMeetsBigGroupOften=10
 loadDeltaExceeded=50
