--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,23 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.3</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.4</version>
@@ -70,6 +87,11 @@
             <manifest>
               <mainClass>org.iypt.planner.gui.PlannerApplication</mainClass>
             </manifest>
+            <manifestEntries>
+              <IYPT-Planner-Date>${maven.build.timestamp}</IYPT-Planner-Date>
+              <IYPT-Planner-Revision>${buildNumber}</IYPT-Planner-Revision>
+              <IYPT-Planner-Version>${project.version}</IYPT-Planner-Version>
+            </manifestEntries>
           </archive>
         </configuration>
         <executions>
@@ -127,6 +149,11 @@
       <groupId>com.itextpdf</groupId>
       <artifactId>itextpdf</artifactId>
       <version>5.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jcabi</groupId>
+      <artifactId>jcabi-manifests</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>com.neovisionaries</groupId>
