--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,7 @@
     <dependency>
       <groupId>org.drools.planner</groupId>
       <artifactId>drools-planner-core</artifactId>
-      <version>${drools.version}</version>
+      <version>6.0.0.Alpha7</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
