Fast tests profile is inactive by default

--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
       <id>fastTests</id>
       <activation>
         <property>
-          <name>!allTests</name>
+          <name>skipSolverTests</name>
         </property>
       </activation>
       <build>
