--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
     <pivot.version>2.0.3</pivot.version>
-    <drools.version>5.5.0.Final</drools.version>
+    <drools.version>6.0.0.Final</drools.version>
   </properties>
 
   <build>
@@ -305,9 +305,9 @@
       <version>${drools.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.drools.planner</groupId>
-      <artifactId>drools-planner-core</artifactId>
-      <version>6.0.0.Alpha7</version>
+      <groupId>org.optaplanner</groupId>
+      <artifactId>optaplanner-core</artifactId>
+      <version>${drools.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
