Use Enforcer to check transitive dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,35 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.4.1</version>
+        <dependencies>
+          <dependency>
+            <groupId>de.is24.maven.enforcer.rules</groupId>
+            <artifactId>illegal-transitive-dependency-check</artifactId>
+            <version>1.7.4</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>enforce-direct-dependencies</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <illegalTransitiveDependencyCheck implementation="de.is24.maven.enforcer.rules.IllegalTransitiveDependencyCheck">
+                  <reportOnly>false</reportOnly>
+                  <useClassesFromLastBuild>true</useClassesFromLastBuild>
+                  <suppressTypesFromJavaRuntime>true</suppressTypesFromJavaRuntime>
+                </illegalTransitiveDependencyCheck>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
