--- a/pom.xml
+++ b/pom.xml
@@ -323,14 +323,15 @@
       <version>${pivot.version}</version>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>org.drools</groupId>
-      <artifactId>drools-core</artifactId>
-      <version>${drools.version}</version>
-    </dependency>
+    <!-- TODO drop legacy knowledge API -->
     <dependency>
       <groupId>org.drools</groupId>
       <artifactId>knowledge-api</artifactId>
+      <version>${drools.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-api</artifactId>
       <version>${drools.version}</version>
     </dependency>
     <dependency>
