Create API module with domain package

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   </properties>
 
   <modules>
+    <module>iypt-planner-api</module>
     <module>iypt-planner-gui-pivot</module>
   </modules>
 
