--- a/iypt-planner-gui-pivot/pom.xml
+++ b/iypt-planner-gui-pivot/pom.xml
@@ -281,6 +281,15 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.iypt</groupId>
+      <artifactId>iypt-planner-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.iypt</groupId>
+      <artifactId>iypt-planner-io-csv</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-api</artifactId>
     </dependency>
