--- a/iypt-planner-gui-pivot/pom.xml
+++ b/iypt-planner-gui-pivot/pom.xml
@@ -248,10 +248,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.itextpdf</groupId>
-      <artifactId>itextpdf</artifactId>
-    </dependency>
-    <dependency>
       <groupId>com.jcabi</groupId>
       <artifactId>jcabi-manifests</artifactId>
     </dependency>
@@ -287,6 +283,11 @@
     <dependency>
       <groupId>org.iypt</groupId>
       <artifactId>iypt-planner-io-csv</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.iypt</groupId>
+      <artifactId>iypt-planner-pdf</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
