Move schedule export to CSV IO module

--- a/iypt-planner-io-csv/pom.xml
+++ b/iypt-planner-io-csv/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>iypt-planner-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.iypt</groupId>
+      <artifactId>iypt-planner-test-util</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
