--- a/iypt-planner-io-csv/pom.xml
+++ b/iypt-planner-io-csv/pom.xml
@@ -23,6 +23,10 @@
       <artifactId>super-csv</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.iypt</groupId>
       <artifactId>iypt-planner-api</artifactId>
     </dependency>
