--- a/src/main/resources/weights.properties
+++ b/src/main/resources/weights.properties
@@ -4,6 +4,7 @@ inexperiencedJurorVoting=500
 jurorAndJurorConflict=10
 jurorMeetsBigGroupOften=10
 loadDeltaExceeded=50
+chairLoadDeltaExceeded=100
 penalizeChairChange=5
 penalizeJurorChange=5
 penalizeJurorWithdraw=5
